--- a/248.html
+++ b/248.html
@@ -52,13 +52,13 @@ td a img {
 <table width="606" border="0" align="center" cellpadding="3" cellspacing="0">
   <tbody>
     <tr>
-      <td><a href="https://sociales.unc.edu.ar/content/colaci-n-de-grado-y-posgrado-de-sociales-2" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/colacion-de-grado-y-posgrado-de-sociales.jpg" width="600" height="200" alt="" style="display: block; border-radius: 4px;"/></a></td>
+      <td><a href="https://sociales.unc.edu.ar/content/acto-por-los-10-os-de-la-fcs-memoria-viva-ciencia-que-transforma-futuro-com-n" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/colacion-de-grado-y-posgrado-de-sociales.jpg" width="600" height="200" alt="" style="display: block; border-radius: 4px;"/></a></td>
     </tr>
     <tr>
       <td height="28" align="center" valign="top">
        
-        <h3 style="font-family:Verdana, Geneva, sans-serif; font-size:12px; "><strong>Acto fin de año + emi dambra <br />
-        .</strong></h3></td>
+        <h3 style="font-family:Verdana, Geneva, sans-serif; font-size:12px; "><strong>La Facultad de Ciencias Sociales de la UNC invita al acto en <strong>conmemoración de su <br />
+        10° aniversario</strong>, que se llevará a cabo el viernes 12 de diciembre de 2025.</strong></h3></td>
     </tr>
   </tbody>
 </table>
@@ -69,7 +69,7 @@ td a img {
   </tr>
   <tr>
     <td width="299" height="48" align="left" valign="top"><h4><span style="font-family:Verdana, Geneva, sans-serif; font-size:12px; "><strong>Surgió luego de la evaluación de los Proyectos de Investigación, Desarrollo, Tecnología y Artes (PIDTA) presentados en la Convocatoria 2025 de la Secretaría de Ciencia y Tecnología de la UNC (Secyt).  </strong></span></h4></td>
-    <td width="295" height="48" align="left" valign="top"><h4 style="font-family:Verdana, Geneva, sans-serif; font-size:12px; "><strong>Más de 90 egresados y egresadas recibieron su título de las Licenciaturas en Ciencia Política, Sociología y Trabajo Social, y de Especializaciones, Maestrías, Doctorados y Posdoctorado del CEA, IIFAP e IPSIS.</strong></h4></td>
+    <td width="295" height="48" align="left" valign="top"><h4 style="font-family:Verdana, Geneva, sans-serif; font-size:12px; "><strong>Reconocimiento Emi D’Ambra.</strong></h4></td>
   </tr>
 </tbody></table>
 <table width="602" border="0" align="center" cellpadding="0" cellspacing="0">
@@ -137,6 +137,14 @@ td a img {
     <td width="123" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:12px;"><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/conversatorio-20-os-de-la-sanci-n-de-la-ley-de-protecci-n-integral-de-los-derechos-nnya" target="_blank">Conversatorio a 20 años de la sanción de la Ley de protección integral de los derechos NNyA</a></h2></td>
     <td width="170" ><img src="https://sociales.unc.edu.ar/sites/default/files/por-primera-vez-el-archivo-gregorio-bermann-participo-de-la-noche-de-los-museso.jpg" width="170" height="120" alt="" style="display: block; border-radius: 4px;"/></td>
     <td width="126" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:12px;"><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/inici-la-diplomatura-universitaria-esi-para-las-organizaciones-sociales" target="_blank"></a><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/qu-se-dice-y-qu-no-se-dice-sobre-la-cuesti-n-energ-tica" target="_blank"></a><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/nuevas-leyes-para-el-trabajo-social-en-c-rdoba" target="_blank">Nuevas leyes para el Trabajo Social en Córdoba</a></h2></td>
+  </tr>
+</table>
+<table width="604" border="0" align="center" cellpadding="0" cellspacing="3">
+  <tr>
+    <td width="170" height="120" ><img src="https://sociales.unc.edu.ar/sites/default/files/sociales-y-laboratorio-pop-presentes-en-la-decimoseptima-marcha-del-orgullo-lbgtq.jpg" width="170" height="120" alt="" style="display: block; border-radius: 4px;"/></td>
+    <td width="123" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:12px;"><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/felicitaciones-egresados-y-egresadas-de-sociales" target="_blank">Colación de Grado y Posgrado de Sociales</a></h2></td>
+    <td width="170" ><img src="https://sociales.unc.edu.ar/sites/default/files/por-primera-vez-el-archivo-gregorio-bermann-participo-de-la-noche-de-los-museso.jpg" width="170" height="120" alt="" style="display: block; border-radius: 4px;"/></td>
+    <td width="126" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:12px;"><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/inici-la-diplomatura-universitaria-esi-para-las-organizaciones-sociales" target="_blank"></a><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/qu-se-dice-y-qu-no-se-dice-sobre-la-cuesti-n-energ-tica" target="_blank"></a></h2></td>
   </tr>
 </table>
 <table width="600" border="0" align="center" cellspacing="0">
@@ -236,7 +244,7 @@ td a img {
   <tbody>
     <tr>
       <!--Bloque contenido de FCSinvestiga. No tocar estilos. Reemplazar contenido, con cortar y pegar.-->
-      <td width="20" rowspan="11" align="center" valign="middle" bgcolor="#9ad2b0" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; color:#000">&nbsp;</td>
+      <td width="20" rowspan="12" align="center" valign="middle" bgcolor="#9ad2b0" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; color:#000">&nbsp;</td>
     </tr>
     <!--Bloque Lo que Viene: Desde aquí se pueden ocultar fechas en caso de que no exista información para la agenda.-->
     <tr>
@@ -245,7 +253,11 @@ td a img {
     </tr>
     <tr>
       <td align="center" style="font-family:Verdana, Geneva, sans-serif; font-size:12px"><strong>12/12/2025</strong></td>
-      <td bgcolor="#9ad2b0" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; margin-left:5px; color:#000"><strong id="docs-internal-guid-8fba4c47-7fff-65c2-8d8c-c2f47ca"><a style="text-decoration:none;color:#000" href="https://sociales.unc.edu.ar/content/5-sesi-n-c-tedra-libre-immanuel-wallerstein-con-william-robinson" target="_blank">10 años fcs + emi dambra</a></strong></td>
+      <td bgcolor="#9ad2b0" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; margin-left:5px; color:#000"><strong id="docs-internal-guid-8fba4c47-7fff-65c2-8d8c-c2f47ca"><a style="text-decoration:none;color:#000" href="https://sociales.unc.edu.ar/content/acto-por-los-10-os-de-la-fcs-memoria-viva-ciencia-que-transforma-futuro-com-n" target="_blank">Celebración de los 10 años de la facu</a></strong></td>
+    </tr>
+    <tr>
+      <td align="center" style="font-family:Verdana, Geneva, sans-serif; font-size:12px"><strong>12/12/2025</strong></td>
+      <td bgcolor="#9ad2b0" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; margin-left:5px; color:#000"><strong id="docs-internal-guid-8fba4c47-7fff-65c2-8d8c-c2f47ca2"><a style="text-decoration:none;color:#000" href="https://sociales.unc.edu.ar/content/5-sesi-n-c-tedra-libre-immanuel-wallerstein-con-william-robinson" target="_blank">emi dambra</a></strong></td>
     </tr>
   </tbody>
 </table>
